@@ -82,7 +82,7 @@ public class TestEagerReclaimHumongousRegions {
             "-Xms128M",
             "-Xmx128M",
             "-Xmn16M",
-            "-XX:+PrintGC",
+            "-Xlog:gc",
             ReclaimRegionFast.class.getName());
 
         Pattern p = Pattern.compile("Full GC");
